<resources>
    <string name="app_name">home work -1</string>
    <string name="d_e_l_t_a">D E L T A</string>
    <string name="passenger">Passenger</string>
    <string name="kathleen_huang">Kathleen Huang</string>
    <string name="jfk">JFK</string>
    <string name="sea">SEA</string>
    <string name="new_york_city">NEW YORK CITY</string>
    <string name="seattle">SEATTLE</string>
    <string name="depart">DEPART</string>
    <string name="arrive">ARRIVE</string>
    <string name="_8_00am">8:00AM</string>
    <string name="_11_17am">11:17AM</string>
    <string name="boarding_begins">BOARDING BEGINS</string>
    <string name="_7_30am">7:30AM</string>
    <string name="flight">FLIGHT</string>
    <string name="d2218">D2218</string>
    <string name="gate">GATE</string>
    <string name="d4">D4</string>
    <string name="seat">SEAT</string>
    <string name="_3c">3C</string>
</resources>